MODBULKOPS-127 Fixed sonar